[package]
name = "fmls-r2d"
version = "0.1.0-a1"
edition = "2021"
license = "LGPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
repository = "https://github.com/fm-elpac/fmls"

[dependencies]
libfmls = { path = "../libfmls", default-features = false }

log = "^0.4.19"
env_logger = "^0.10.0"
serde = { version = "^1.0.178", features = ["derive"] }
serde_json = "^1.0.104"
tokio = { version = "^1.29.1", features = ["full"] }

[build-dependencies]
built = { version = "^0.6.1" }
vergen = { version = "^8.2.4", features = ["build", "git", "gitcl"] }

[features]
default = ["gnu", "quic-quiche"]

gnu = ["libfmls/gnu"]
quic-quiche = ["libfmls/quic-quiche"]
quic-quinn = ["libfmls/quic-quinn"]
