[package]
name = "fmlsd"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
repository = "https://github.com/fm-elpac/fmls"
description = "daemon of FMLS"
keywords = ["fmls"]
categories = ["network-programming", "authentication"]

[dependencies]
libfmls = { path = "../libfmls" }

log = "^0.4.18"
env_logger = "^0.10.0"
