[package]
name = "libfmls"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
repository = "https://github.com/fm-elpac/fmls"
description = "main library of FMLS"
keywords = ["fmls"]
categories = ["network-programming", "authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfmlsc = { path = "../libfmlsc" }

log = "^0.4.18"
serde = { version = "^1.0.163", features = ["derive"] }
serde_json = "^1.0.96"
tokio = { version = "^1.28.2", features = ["full"] }
quiche = "^0.17.2"
rustls = "^0.21.1"

[features]
default = ["gnu"]

# gnu: 普通 GNU/Linux (台式机, 笔记本, 机架服务器 等)
gnu = []
# openwrt: OpenWrt 路由器
openwrt = []
