[package]
name = "libfmls"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
repository = "https://github.com/fm-elpac/fmls"
description = "main library of FMLS"
keywords = ["fmls"]
categories = ["network-programming", "authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfmlsc = { path = "../libfmlsc" }

log = "^0.4.19"
serde = { version = "^1.0.178", features = ["derive"] }
serde_json = "^1.0.104"
crc = "^3.0.1"
crc32fast = "^1.3.2"
tokio = { version = "^1.29.1", features = ["full"] }

# HTTP/3 QUIC 实现 (`quiche`): 适用于 `x86_64`, `aarch64`
# 目前不能支持 `mipsel` (`rustls` / `ring` build BUG)
quiche = { version = "^0.17.2", optional = true }
rustls = { version = "^0.21.5", optional = true }

# HTTP/3 QUIC 实现 (`s2n-quic`): 可以支持 `mipsel` (使用 `cross` 编译)
s2n-quic = { version = "^1.25.0", default-features = false, features = ["provider-tls-s2n", "provider-address-token-default"], optional = true }
#s2n-quic-h3 = { git = "https://github.com/aws/s2n-quic", optional = true }
h3 = { version = "^0.0.2", optional = true }

# (HTTP/3) QUIC 实现 (`quinn`): 可以编译到 `mipsel` (尚未实现)
quinn = { version = "^0.10.1", default-features = false, features = ["native-certs", "runtime-tokio", "log"], optional = true }
openssl = { version = "^0.10.55", features = ["vendored"], optional = true }
#mbedtls = "0.11.0"  # build failed
mbedtls = { version = "0.10.0", optional = true }

[features]
default = ["gnu", "quic-quiche"]

# gnu: 普通 GNU/Linux (台式机, 笔记本, 机架服务器 等)
gnu = []
# openwrt: OpenWrt 路由器
openwrt = []

# HTTP/3 QUIC 实现使用 `quiche` (适用于 `x86_64`, `aarch64`)
quic-quiche = ["quiche", "rustls"]
# HTTP/3 QUIC 实现使用 `s2n-quic` (适用于 `mipsel`)
quic-s2n = ["s2n-quic", "h3"]
# (HTTP/3) QUIC 实现使用 `quinn` (适用于 `mipsel`) (尚未实现)
quic-quinn = ["quinn", "openssl", "mbedtls", "h3"]
