[package]
name = "libfmlsm"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
repository = "https://github.com/fm-elpac/fmls"
description = "r2 (MCU) library of FMLS"
keywords = ["fmls"]
categories = ["embedded", "no-std", "network-programming"]

[dependencies]
libfmlsc = { path = "../libfmlsc" }

crc = { version = "^3.0.1", optional = true }

[dev-dependencies]
libfmls = { path = "../libfmls" }

[features]
default = ["r2c3p-full"]

# fmls_r2c3p 协议: 启用完整功能
r2c3p-full = ["r2c3p-s", "r2c3p-at", "r2c3p-o", "r2c3p-v"]
# "标准" MCU 的配置
r2c3p-s = ["r2c3p-crc32", "r2c3p-c", "r2c3p-t", "r2c3p-cc", "r2c3p-i"]
# 启用 crc16
r2c3p-crc16 = ["crc"]
# 启用 crc32
r2c3p-crc32 = ["r2c3p-crc16"]
# 启用对 `c`, `C` 消息的支持
r2c3p-c = []
# 启用对 `@` 消息的支持 (以及 `@`, `@s`N, `@n`N 配置项)
r2c3p-at = []
# 启用对 `T`, `t` 配置项的支持
r2c3p-t = []
# 启用传输质量监测计数器: `cT`, `cR`, `cRd`, `cTB`, `cRB`
r2c3p-cc = []
# 启用对 `I` 配置项的支持
r2c3p-i = []
# 启用对 `O`, `On` 配置项的支持
r2c3p-o = []
# 对接收 `V` 消息的支持
r2c3p-v = []
